# ANewDawn

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  main.go  main.py  main_test.go  misc.py  misc_test.py  openai.go  pyproject.toml  reset_undo_test.py  settings.go  settings.json.example  settings.py  settings_test.go
.gitea/workflows/: docker-publish.yml
.github/: SECURITY.md  copilot-instructions.md
.github/workflows/: docker-check.yml  docker-publish.yml  ruff.yml
