[project]
name = "anewdawn"
version = "0.1.0"
description = "My shit bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["discord-py", "openai", "python-dotenv"]

[tool.ruff]
# https://docs.astral.sh/ruff/
line-length = 120
fix = true
unsafe-fixes = true
extend-exclude = [".venv"]
show-fixes = true

[tool.ruff.lint]
# https://docs.astral.sh/ruff/linter/
preview = true
select = ["ALL"]
ignore = [
    "CPY001", # Checks for the absence of copyright notices within Python files.
    "D100",   # Checks for undocumented public module definitions.
    "FIX002", # Checks for "TODO" comments.
    "D104",   # Checks for undocumented public package definitions.
    # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "COM819",
    "ISC001",
    "ISC002",
]
pydocstyle.convention = "google"
isort.required-imports = ["from __future__ import annotations"]
pycodestyle.ignore-overlong-task-comments = true

[tool.ruff.format]
# https://docs.astral.sh/ruff/formatter/
docstring-code-format = true
docstring-code-line-length = 20

[tool.uv.workspace]
members = ["anewdawn"]

[dependency-groups]
dev = ["ruff>=0.8.0"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ARG", "FBT"]
